--- a/Plik1.html
+++ b/Plik1.html
@@ -1,7 +1,9 @@
 <!DOCTYPE=html>
 <html lang ="en">
-<head><title>HELLO</title></head>
-<body>
-Hello,world
-</body>
+<head>
+	<title>HELLO!!!!!!!!!!!</title>
+</head>
+	<body>
+		Hello,world!
+	</body>
 </html>
