--- a/Plik1.html
+++ b/Plik1.html
@@ -4,7 +4,7 @@
 	<title>HELLO!!!!!!!!!!!</title>
 </head>
 	<body>
-	<h1>Welcome to my website</h1>
+	<h1>Welcome to my website, have a nice day</h1>
 	<h2>Tekst</h2>
 		Hello,world!
 	</body>
