--- a/Plik1.html
+++ b/Plik1.html
@@ -4,13 +4,14 @@
 	<title>HELLO!!!!!!!!!!!</title>
 	<style>
 	h1{
-		color:blue;
+		color:red;
 		}
 	</style>
 </head>
 	<body>
-	<h1>Welcome to my website, have a nice day!</h1>
+	<h1>TEKST!</h1>
 	<h2>Tekst</h2>
+	<h3>NOWY</h3>
 		Hello,world!
 	</body>
 </html>
